fix: use standard variables and handled cta visibility

--- a/static/scss/detail/header.scss
+++ b/static/scss/detail/header.scss
@@ -205,8 +205,8 @@
     font-weight: 700;
     margin-left: 20px;
 
-    background: #FFFFFF;
-    border: 1px solid #A31F34;
+    background: $white;
+    border: 1px solid $primary;
     border-radius: 5px;
 
     &:hover {
@@ -239,9 +239,9 @@
 .modal-content-signup {
   position: relative;
   width: 500px;
-  background: #FFFFFF;
+  background: $white;
   border-radius: 4px;
-  color: #000;
+  color: $black;
 
   .close {
     opacity: 1;
@@ -264,9 +264,9 @@
     align-items: center;
     text-transform: uppercase;
 
-    color: #A31F34;
-    background: #FFFFFF;
-    border: 1px solid #A31F34;
+    color: $primary;
+    background: $white;
+    border: 1px solid $primary;
     border-radius: 5px;
     &:hover {
         // underline is at different levels since we centered the text and checkmark vertically, so it looks strange
@@ -282,7 +282,7 @@
     font-size: 26px;
     line-height: 26px;
     text-align: center;
-    color: #A31F34;
+    color: $primary;
   }
 
   p {
